[project]
name = "scraperproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.9.0",
    "fastapi>=0.115.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "poethepoet>=0.32.1",
]

[tool.poe.tasks]
start = "uv run main.py"
dev = "uvicorn main:app --reload --port 7860"
test = "uv run test.py"
freeze =  { shell = "uv pip compile pyproject.toml -o requirements.txt" }
docker-build = "docker build --progress=plain -t zhezzma/scraperproxy:latest ."
docker-push = "docker push zhezzma/scraperproxy:latest"